DateFormat utility (#116)
* DateFormat helper

* add deprecated version

* ofPattern add javadoc

* introduce DateUtil

* fix ReflectiveInstanceSupplierTest

* improve DateFormat to handle more types out of the box